# QT-OpenCV

./: .gitattributes  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.33a6e05  ClassifierExample  ClassifierExample.cbp  Makefile  README.md  cmake_install.cmake  mainwindow.cpp  mainwindow.h  mainwindow.ui
.cmake/api/v1/reply/: cache-v2-c189bac9a7ff60f9bef1.json  cmakeFiles-v1-0983cf3000a00e601195.json  codemodel-v2-015cdcf7569ba8e2bbb2.json  codemodel-v2-6901522bece945b8f4cc.json  index-2021-12-28T16-39-01-0455.json  index-2021-12-28T20-21-54-0067.json  target-ClassifierExample-Debug-9fcb740d35e91d885402.json  target-ClassifierExample-Debug-a5b535a00af4f24ab3ae.json  target-ClassifierExample_autogen-Debug-374a7af92298646428c7.json
ClassifierExample_autogen/EWIEGA46WW/: moc_mainwindow.cpp
ClassifierExample_autogen/include/: ui_mainwindow.h
